[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://textures/marble01.jpg" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://textures/marble01_n.jpg" type="Texture" id=4]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://art/gameover.ogg" type="AudioStream" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 30, 1, 30 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.470588, 0.72549, 0.839216, 1 )
albedo_texture = ExtResource( 2 )
metallic = 0.45
metallic_specular = 1.0
roughness = 0.57
normal_enabled = true
normal_scale = 4.4
normal_texture = ExtResource( 4 )
uv1_scale = Vector3( 16, 16, 0 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 60, 2, 60 )

[sub_resource type="ProceduralSky" id=5]
sky_energy = 0.2

[sub_resource type="Environment" id=6]
background_sky = SubResource( 5 )
ambient_light_color = Color( 0.254902, 0.172549, 0.243137, 1 )
fog_enabled = true
fog_color = Color( 0.317647, 0.396078, 0.913725, 1 )
fog_sun_color = Color( 0.596078, 0.878431, 0.952941, 1 )
fog_depth_begin = 24.0
fog_depth_end = 82.0
fog_depth_curve = 0.87055
fog_height_min = 3.6
fog_height_max = -1.4
fog_height_curve = 1.41422

[sub_resource type="CylinderMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.243137, 0.921569, 0.945098, 1 )

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="GUI" parent="." instance=ExtResource( 6 )]

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.974287, 0 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
material_override = SubResource( 7 )
cast_shadow = 0
mesh = SubResource( 2 )
material/0 = null

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15405, 0 )

[node name="MobDelay" type="Timer" parent="."]
wait_time = 0.2

[node name="environment" type="Node" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="environment"]
environment = SubResource( 6 )

[node name="CameraPivot" type="Spatial" parent="environment"]
transform = Transform( 1, 0, 0, 0, 0.70066, 0.713495, 0, -0.713495, 0.70066, 0, 0, 0 )

[node name="Camera" type="Camera" parent="environment/CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 1.71661e-05, 33.36 )
projection = 1
fov = 51.1
size = 24.0

[node name="Sun" type="DirectionalLight" parent="environment"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 30, 0 )
light_color = Color( 0.913725, 0.890196, 0.819608, 1 )
light_bake_mode = 2
shadow_enabled = true
shadow_color = Color( 0.34902, 0.34902, 0.34902, 1 )
directional_shadow_mode = 0
directional_shadow_max_distance = 10.0

[node name="light_1" type="OmniLight" parent="environment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.8256, 6.01078, -40.3895 )
light_color = Color( 0.321569, 0.462745, 0.945098, 1 )
light_energy = 2.535
light_bake_mode = 2
omni_range = 59.149
omni_attenuation = 1.51572

[node name="light_2" type="OmniLight" parent="environment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24.6088, 8.42065, 21.1178 )
light_color = Color( 0.898039, 0.662745, 0.333333, 1 )
light_energy = 2.535
light_bake_mode = 2
omni_range = 59.149
omni_attenuation = 1.51572

[node name="cylinders" type="Spatial" parent="."]
visible = false

[node name="MeshInstance" type="MeshInstance" parent="cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.2483, 0, -17.3799 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance2" type="MeshInstance" parent="cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.738, 0, -17.3799 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance3" type="MeshInstance" parent="cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.2483, 0, 18.0941 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance4" type="MeshInstance" parent="cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.738, 0, 18.0941 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Sounds" type="Node" parent="."]

[node name="GameMusic" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
volume_db = -12.0

[node name="GameOver" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )

[connection signal="game_over" from="Player" to="." method="_on_Player_game_over"]
[connection signal="score_change" from="Player" to="GUI" method="_on_Player_score_change"]
[connection signal="timeout" from="MobDelay" to="." method="_on_MobDelay_timeout"]
